Update 'eaqgpdmce-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:21dd101883c237568b25e351553abe7f5dcdb996@sha256:133b89c1b9243a86036ba3505d1bce05f257f7f7b45d4ae673cf8a3138cc354b

--- a/components/eaqgpdmce-python/overlays/development/deployment-patch.yaml
+++ b/components/eaqgpdmce-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: eaqgpdmce-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:21dd101883c237568b25e351553abe7f5dcdb996@sha256:133b89c1b9243a86036ba3505d1bce05f257f7f7b45d4ae673cf8a3138cc354b
+          name: container-image
